--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>io.pozhidaev</groupId>
 	<artifactId>sisyphus-client</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SisyphusClient</name>
+	<name>sisyphus-client</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
