--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -19,5 +19,10 @@
       "name": "sisyphus-client.completed-folder",
       "type": "java.lang.String",
       "description": "Files transferred dir."
+    },
+    {
+      "name": "sisyphus-client.chunk-size",
+      "type": "java.lang.Integer",
+      "description": "Description for sisyphus-client.chunk-size."
     }
   ] }
