--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,7 @@ logging:
     root: info
     org.springframework: debug
     io.pozhidaev: debug
+sun:
+  net:
+    http:
+      allowRestrictedHeaders: true
