--- a/pom.xml
+++ b/pom.xml
@@ -31,10 +31,15 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-integration</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-file</artifactId>
 		</dependency>
 
 		<dependency>
