--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,5 @@ logging:
   level:
     root: info
     org.springframework: debug
+    org.springframework.integration: info
     io.pozhidaev: debug
-sun:
-  net:
-    http:
-      allowRestrictedHeaders: true
