--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,7 @@ sisyphus-client:
   source-folder: ${HOME}/tmp/source
   completed-folder: ${HOME}/tmp/completed
   chunk-size: 1024
+  intervals: [500, 1000, 2000, 3000]
 server:
   port: 8081
 
