--- a/pom.xml
+++ b/pom.xml
@@ -71,8 +71,8 @@
 		</dependency>
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
-			<artifactId>okhttp</artifactId>
-			<version>3.4.2</version>
+			<artifactId>mockwebserver</artifactId>
+			<version>3.14.0</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
